# online_store

diplom_store/: .gitignore  1_products_ids.json  README.md  amazon.py  new06.xls  oldsmeta.xls  pyproject.toml  specifications.json  tag.py  task1.py  task2.py  task5.py
diplom_store/online_store/: .env  .gitlab-ci.yml  1_products_ids.json  2_items.json  3_prices.json  4_items_prices.json  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  example.env  nginx.conf  pyproject.toml  ram.txt  swagger.json  tag.py  task.py
diplom_store/online_store/account/: admin.py  api.py  forms.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
diplom_store/online_store/cart/: cart.py  context_processor_cart.py  models.py  serializers.py  urls.py  views.py
diplom_store/online_store/catalog/: admin.py  context_processor_catalog.py  examples.py  filters.py  models.py  serializers.py  urls.py  views.py
diplom_store/online_store/frontend/: urls.py
diplom_store/online_store/media/: django.po
diplom_store/online_store/online_shop_app/: models.py  urls.py
diplom_store/online_store/online_store/: settings.py  urls.py  views.py
diplom_store/online_store/order/: admin.py  models.py  serializers.py  urls.py  views.py
diplom_store/online_store/payment/: admin.py  models.py  red.md  serializers.py  services.py  urls.py  views.py
diplom_store/online_store/product/: admin.py  models.py  serializers.py  urls.py  views.py
diplom_store/online_store/review/: models.py
diplom_store/online_store/settings/: admin.py  models.py  serializers.py  urls.py  views.py
diplom_store/online_store/tag/: admin.py  models.py  serializers.py  urls.py  views.py
diplom_store/online_store/tests/: test_account.py  test_cart.py  test_catalog.py  test_order.py  test_product.py  (+3 more)
megano/: pyproject.toml
(+146 files in other folders)
